--- a/src/server/shop/templates/shop/product_form.html
+++ b/src/server/shop/templates/shop/product_form.html
@@ -1,10 +1,9 @@
 {% extends 'template_base.html' %}
 
 {% block content %}
-<h2>Login</h2>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Login</button>
+    <input type="submit" value="Save">
 </form>
 {% endblock %}
