--- a/src/server/shop/templates/template_base.html
+++ b/src/server/shop/templates/template_base.html
@@ -1,5 +1,5 @@
 <body>
-    <p><a href="{% url 'shop:index' %}">Home</a> | <a href="{% url 'shop:login' %}">Login</a> | <a href="{% url 'shop:register' %}">Register</a> | <a href="{% url 'shop:logout' %}">Logout</a></p>
+    <p><a href="{% url 'shop:index' %}">Home</a> | <a href="{% url 'shop:login' %}">Login</a> | <a href="{% url 'shop:register' %}">Register</a> | <a href="{% url 'shop:logout' %}">Logout</a> | <a href="{% url 'shop:cart' %}">Cart</a></p>
     {% if user.is_authenticated %}
     <p>Welcome {{ user.username }}!</p>
     <a href="{% url 'shop:create_product' %}">Create a product</a>
