--- a/src/server/shop/templates/shop/cart.html
+++ b/src/server/shop/templates/shop/cart.html
@@ -7,5 +7,5 @@
     <li>{{ product }}</li>
     {% endfor %}
 </ul>
-<p><a href="{% url 'shop:checkout' %}">Proceed to checkout</a></p>
+<p><a href="{% url 'shop:checkout' %}" id="checkout">Proceed to checkout</a></p>
 {% endblock %}
